--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "blurhash": "^2.0.5",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "sass": "^1.62.1",
