--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "atlas",
-  "private": false,
-  "version": "3.0.0",
+  "name": "client",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "blurhash": "^2.0.5",
-    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
-    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.0",
-    "sass": "^1.62.1",
-    "zotion": "^1.1.5"
+    "react-router-dom": "^6.11.1",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
